feat: update business page navigation for vertical layout and add nav script

--- a/business.html
+++ b/business.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -8,16 +8,17 @@
 </head>
 <body>
   <nav class="navbar">
-<div class="logo">
+        <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
  >
-    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
+    
   </div>
-    <div>
+            <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="business.html" class="active">For Businesses</a>
       <a href="verify.html">Verify Product</a>
       <a href="login.html">Login/Signup</a>
     </div>
+                    <a class="icon" onclick="toggleMenu()">&#9776;</a>
   </nav>
   <div style="max-width:960px; margin:2rem auto;">
     <h2>Empower Your Supply Chain</h2>
@@ -58,6 +59,7 @@
     <div id="qrOutput" class="qr-code" style="display:none;"></div>
   </div>
   <script src="js/business.js"></script>
-  <script src="js/wallet.js"></script>
+<script src="js/nav.js"></script>
+<script src="js/wallet.js"></script>
 </body>
 </html>
