--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
   <!-- Navigation bar visible on every page -->
-  <nav class="navbar">
-    <div class="logo">
-      <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
-    </div>
-    <div class="nav-links">
-      <a href="index.html" class="active">Home</a>
-      <a href="business.html">For Businesses</a>
-      <a href="verify.html">Verify Product</a>
-      <a href="login.html">Login/Signup</a>
-    </div>
-    <a class="icon" onclick="toggleMenu()">&#9776;</a>
-  </nav>
+  <<nav class="sidebar">
+  <div class="sidebar-logo">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+  </div>
+  <ul class="sidebar-nav">
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="business.html">For Businesses</a></li>
+    <li><a href="verify.html">Verify Product</a></li>
+    <li><a href="login.html">Login/Signup</a></li>
+  </ul>
+</nav>
+<div class="main-with-sidebar">
 
   <!-- Hero section -->
   <section style="padding: 2rem; text-align: center;">
@@ -48,6 +48,7 @@
       </p>
     </div>
   </section>
+</div>
 
   <!-- Footer -->
   <footer style="margin-top: auto; padding: 1rem; text-align: center; background-color: #003366; color: #ffffff;">
