feat(ui): convert dashboard page to sidebar nav and wrap content

--- a/dashboard.html
+++ b/dashboard.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
-      <div>
-        <a href="index.html">Home</a>
-        <!-- Removed For Businesses link on dashboard -->
-        <a href="verify.html">Verify Product</a>
-        <a href="dashboard.html" class="active">Dashboard</a>
-        <a href="settings.html">Settings</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-      </div>
-    </nav>
-
+  <nav class="sidebar">
+  <div class="sidebar-logo">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+  </div>
+  <ul class="sidebar-nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="verify.html">Verify Product</a></li>
+    <li><a href="dashboard.html" class="active">Dashboard</a></li>
+    <li><a href="settings.html">Settings</a></li>
+    <li><a href="#" id="connectWalletLink">Connect Wallet</a></li>
+  </ul>
+</nav>
+<d<div class="main-with-sidebar">
     <div class="dashboard-container">
       <h2>Welcome to your dashboard</h2>
       <p>Manage your product batches and view history.</p>
@@ -136,5 +137,7 @@
         });
       });
     </script>
-  </body>
+</div>
+</body>
+  </html>
 </html>
