feat(ui): convert login page to sidebar nav and fix layout

--- a/login.html
+++ b/login.html
@@ -7,20 +7,19 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">
-    <a href="index.html">
-        <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" style="height:3em;vertical-align:middle;">
-    </a>
-</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="business.html">For Businesses</a>
-        <a href="verify.html">Verify Product</a>
-        <a href="login.html" class="active">Login</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-      </div>
-    </nav>
+ <nav class="sidebar">
+  <div class="sidebar-logo">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+  </div>
+  <ul class="sidebar-nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="business.html">For Businesses</a></li>
+    <li><a href="verify.html">Verify Product</a></li>
+    <li><a href="login.html" class="active">Login</a></li>
+    <li><a href="#" id="connectWalletLink">Connect Wallet</a></li>
+  </ul>
+</nav>
+<di<div class="main-with->sidebar">
 
     <div class="auth-container">
       <h2>Login</h2>
@@ -84,5 +83,6 @@
 
     <script src="js/auth.js"></script>
     <script src="js/wallet.js"></script>
+  </div>
   </body>
 </html>
