--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
     <li><a href="#" id="connectWalletLink">Connect Wallet</a></li>
   </ul>
 </nav>
-<d<div class="main-with-sidebar">
+<<div class="main-with-siebar">
     <div class="dashboard-container">
       <h2>Welcome to your dashboard</h2>
       <p>Manage your product batches and view history.</p>
