Update login.hfix: correct wrapper class in login pagetml

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <li><a href="#" id="connectWalletLink">Connect Wallet</a></li>
   </ul>
 </nav>
-<di<div class="main-with->sidebar">
+i<div class="main-with-sidebar">
 
     <div class="auth-container">
       <h2>Login</h2>
