--- a/verify.html
+++ b/verify.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Verify Product – BizTrack.xrp</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Verify Product - BizTrack.xrp</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
   <nav class="sidebar">
-  <div class="sidebar-logo">
-    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
-  </div>
-  <ul class="sidebar-nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="business.html">For Businesses</a></li>
-    <li><a href="verify.html" class="active">Verify Product</a></li>
-    <li><a href="login.html">Login/Signup</a></li>
-  </ul>
-</nav>
-<div class="main-with-siebar">
-
+    <div class="sidebar-logo">
+      <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+    </div>
+    <ul class="sidebar-nav">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="business.html">For Businesses</a></li>
+      <li><a href="verify.html" class="active">Verify Product</a></li>
+      <li><a href="login.html">Login/Signup</a></li>
+    </ul>
+  </nav>
+  <div class="main-with-sidebar">
     <div style="max-width:800px; margin:2rem auto; text-align:center;">
       <h2>Verify a Product’s Authenticity</h2>
       <p>
-        Enter the product ID or scan the QR code to retrieve the on‑chain record
-        of a product. You'll be shown its history, authenticity and
-        sustainability metrics.
+        Enter the product ID or scan the QR code to retrieve the on-chain record of a product. You'll be shown its history, authenticity and sustainability metrics.
       </p>
       <div class="form-group" style="max-width:400px; margin:1rem auto;">
         <label for="verifyId">Product ID</label>
@@ -35,9 +32,8 @@
       <p id="verifyMsg" style="color:#c00; margin-top:0.5rem;"></p>
       <div id="verifyResult" style="margin-top:1.5rem;"></div>
     </div>
-  </</div>>
-
-    <script src="js/verify.js"></script>
-    <script src="js/wallet.js"></script>
-  </body>
+  </div>
+  <script src="js/verify.js"></script>
+  <script src="js/wallet.js"></script>
+</body>
 </html>
