feat(ui): convert settings page to sidebar nav and fix layout

--- a/settings.html
+++ b/settings.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="logo">BizTrack.xrp</div>
-      <div>
-        <a href="index.html">Home</a>
-        <a href="business.html">For Businesses</a>
-        <a href="verify.html">Verify Product</a>
-        <a href="dashboard.html">Dashboard</a>
-        <a href="#" id="connectWalletLink">Connect Wallet</a>
-        <a href="login.html" id="logoutLink">Logout</a>
-      </div>
-    </nav>
-
-    <div class="settings-container">
+  <nav class="sidebar">
+  <div class="sidebar-logo">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+  </div>
+  <ul class="sidebar-nav">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="business.html">For Businesses</a></li>
+    <li><a href="verify.html">Verify Product</a></li>
+    <li><a href="login.html">Login/Signup</a></li>
+  </ul>
+</nav>
+<ddiv class="main-with-sidebar">
       <h2>Account Settings</h2>
       <p>Manage your security settings below.</p>
       <div style="margin-top:1rem;">
@@ -47,10 +46,12 @@
         <button class="btn" id="verifyTotpBtn">Verify &amp; Enable</button>
         <p id="verifyMsg" style="color:#c00; margin-top:0.5rem;"></p>
       </div>
-    </div>
+  </div>
+</div>
 
-    <script src="js/auth.js"></script>
-    <script src="js/wallet.js"></script>
-    <script src="js/settings.js"></script>
-  </body>
-</html>
+  <</div>
+<script src="js/auth.js"></script>
+<script src="js/wallet.js"></script>
+<script src="js/settings.js"></script>
+</body>
+</html>ml>
