fix: remove stray character from index page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>BizTrack - Decentralized Supply Chain</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body>
+>
   <!-- Navigation bar visible on every page -->
   <<nav class="sidebar">
   <div class="sidebar-logo">
@@ -22,7 +22,8 @@
 <div class="main-with-sidebar">
 
   <!-- Hero section -->
-  <section style="padding: 2rem; text-align: center;">
+  <section style="padding: 2rm; text-align: center;">
+
     <h1>Decentralized Supply Chain Tracking on XRPL</h1>
     <p>
       Issue unique product IDs, track events, and verify authenticity with QR codes - no central onboarding required.
