fix: remove stray character from index page header
Removed stray '>' after </head> to eliminate extraneous '<>' at the top of the page.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>BizTrack - Decentralized Supply Chain</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
->
-  <!-- Navigation bar visible on every page -->
+>  <!-- Navigation bar visible on every page -->
   <<nav class="sidebar">
   <div class="sidebar-logo">
     <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
