feat: condense home page layout  Replace index.html with revised layout: remove stray characters, align hero section with logo, reduce whitespace, and left-align text.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <title>BizTrack - Decentralized Supply Chain</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
->  <!-- Navigation bar visible on every page -->
-  <<nav class="sidebar">
+<!-- Navigation bar visible on every page -->
+<nav class="sidebar">
   <div class="sidebar-logo">
-    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack">
+    <img src="8bd1b1ec-0edc-4581-92b8-51ac2db94afe-removebg-preview.png" alt="BizTrack" />
   </div>
   <ul class="sidebar-nav">
     <li><a href="index.html" class="active">Home</a></li>
@@ -19,10 +19,8 @@
   </ul>
 </nav>
 <div class="main-with-sidebar">
-
   <!-- Hero section -->
-  <section style="padding: 2rm; text-align: center;">
-
+  <section style="padding: 0; text-align: left;">
     <h1>Decentralized Supply Chain Tracking on XRPL</h1>
     <p>
       Issue unique product IDs, track events, and verify authenticity with QR codes - no central onboarding required.
@@ -32,7 +30,6 @@
       <a href="verify.html" class="btn btn-secondary">Verify Product</a>
     </div>
   </section>
-
   <!-- Feature highlights -->
   <section style="padding: 2rem; background-color: #f5f5fc;">
     <div style="max-width: 960px; margin: 0 auto;">
@@ -49,13 +46,11 @@
     </div>
   </section>
 </div>
-
-  <!-- Footer -->
-  <footer style="margin-top: auto; padding: 1rem; text-align: center; background-color: #003366; color: #ffffff;">
-    &copy; 2025 BizTrack - Built for decentralized product tracking.
-  </footer>
-
-  <script src="js/wallet.js"></script>
-  <script src="js/nav.js"></script>
+<!-- Footer -->
+<footer style="margin-top: auto; padding: 1rem; text-align: center; background-color: #003366; color: #ffffff;">
+  &copy; 2025 BizTrack - Built for decentralized product tracking.
+</footer>
+<script src="js/wallet.js"></script>
+<script src="js/nav.js"></script>
 </body>
 </html>
