--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
   <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-o5OiaM+1WvKdHGeIxxdz7k3MG/ekOxJalM0dVE2VvW6PUx+IgtJwyGHUp3DHwaEw5Io3gEYjvC6lK/2Cr3zZBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
+
+    <style>
+    :root {
+      --lightblue-bg: #e7f3ff;
+    }
+    body {
+      background-color: var(--lightblue-bg);
+    }
+  </style>
+
+  </head>>
 <body>
   <!-- Navigation bar visible on every page -->
   <nav class="sidebar">
