style: apply light blue background to business page
Added inline <style> in head to set light blue background (#e7f3ff) for body.

--- a/business.html
+++ b/business.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>For Businesses – BizTrack</title>
   <link rel="stylesheet" href="styles.css" />
+    <style>
+    :root {
+      --lightblue-bg: #e7f3ff;
+    }
+    body {
+      background-color: var(--lightblue-bg);
+    }
+  </style>
+  
 </head>
 <body>
 <nav class="sidebar">
